Added protection against CSRF attacks

--- a/src/Treehouse.FitnessFrog/Views/Account/Register.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Account/Register.cshtml
@@ -8,6 +8,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     @Html.ValidationSummary("The following errors were found:", new { @class = "alert alert-danger" })
 
     <div class="row">
