--- a/src/Treehouse.FitnessFrog/Views/Entries/Delete.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Delete.cshtml
@@ -51,6 +51,8 @@
 
         @using (Html.BeginForm())
         {
+            @Html.AntiForgeryToken()
+
             <div class="pad-top">
                 <button type="submit" class="btn btn-danger btn-lg margin-right">
                     <span class="glyphicon glyphicon-trash"></span> Delete
@@ -60,7 +62,7 @@
                 </a>
             </div>
         }
-
+    
     </div>
 
 </div>
