--- a/src/Treehouse.FitnessFrog/Views/Entries/_EntryForm.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/_EntryForm.cshtml
@@ -3,6 +3,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     @Html.ValidationSummary("The following errors were found:", new { @class = "alert alert-danger" })
     @Html.HiddenFor(m => m.Entry.UserId)
 
@@ -18,7 +19,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Entry.ActivityId, new { @class = "control-label" })
                 @Html.DropDownListFor(m => m.Entry.ActivityId,
-                         Model.ActivitiesSelectListItems, "", new { @class = "form-control" })
+                              Model.ActivitiesSelectListItems, "", new { @class = "form-control" })
             </div>
 
             <div class="form-group">
