--- a/src/Treehouse.FitnessFrog/Views/Shared/_Menu.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Shared/_Menu.cshtml
@@ -26,6 +26,7 @@
         </a>
         using (Html.BeginForm("SignOut", "Account", FormMethod.Post, new { @class = "navbar-right" }))
         {
+            @Html.AntiForgeryToken()
             <button type="submit" class="btn btn-default navbar-btn">
                 <span class="glyphicon glyphicon-log-out"></span> Sign Out
             </button>
